--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,30 @@ label {
     display: flex;
     justify-content: center;
 }
+
+button {
+    border-radius: 10px;
+    margin: 1em;
+}
+
+.main {
+    text-align: center;
+}
+
+
+.details {
+    display: flex;
+    justify-content: center;
+}
+
+.countryFlag {
+    padding: 10%;
+}
+
+img {
+    margin-left: 30px;
+}
+
+h1 {
+    margin: 0;
+}
