--- a/src/App.css
+++ b/src/App.css
@@ -6,17 +6,27 @@
     color: #F4C095;
 }
 
+.header {
+    display: flex;
+    gap: 40px;
+}
+
 input {
-    margin: 10px;
-    font-size: 24px;
+    margin: 10px 10px 10px 50px;
+    font-size: 18px;
     outline: none;
+    width: 40vw;
     border: 3px solid #679289;
-    padding: 2px 8px;
+    border-radius: 20px;
+    background-color: #F4C095;
+    color: #071E22;
+    padding: 0.4em;
 }
 
 label {
-    font-size: 36px;
+    font-size: 50px;
     font-weight: 800;
+    margin-left: 1em;
 }
 
 .display {
@@ -49,4 +59,8 @@ img {
 
 h1 {
     margin: 0;
+}
+
+.countryDisplay {
+    padding: 4em;
 }
